# icanhazdadjoke-to-github-api-by-rust

./: Cargo.toml  api.txt
src/: main.rs  old.rs  req.rs
